# AISD_4sem_Lab2

./: 4_sem_Lab2.cpp  4_sem_Lab2.h  CMakeLists.txt
